--- a/shop.html
+++ b/shop.html
@@ -579,7 +579,7 @@
                                 <span class="found-text">Products found after filter</span>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 d-flex align-items-center justify-content-end">
+                        <div class="col-lg-4 col-md-4 d-flex align-items-center justify-content-end" id="shop-filter-icons">
                             <span class="filter-icons"> 
                                 <i class="bi bi-grid-fill"></i>
                                 <i class="bi bi-list-ul"></i>
