--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 
     <div class="menu-overlay"></div>
 
+    <!-- <a href=""> -->
+        <title></title>
+    </a>
+
     <!-- === responsive menu start here === -->
     <section id="side-menu">
         <div class="side-menu-logo">
