side-menu-close-btn

--- a/shop.html
+++ b/shop.html
@@ -130,6 +130,9 @@
         <div class="side-menu-logo">
             <img src="images/top_logo.png" alt="logo_not_found">
         </div>
+        <div class="side-menu-close-btn">
+            <span><i class="fa-solid fa-xmark"></i></span>
+        </div>
         <ul class="menu-cart side-menu-cart">
             <li>
                 <a href="#">
